# bops

./: README.md  bops-tests.asd  bops.asd
c/: CMakeLists.txt  Makefile  bench.cpp  main.cpp
c/bench/: CMakeLists.txt  bench.cpp  bench_dense_f32.cpp
c/lib/: CMakeLists.txt  bops.h  bops.pc.in  dense.cpp  mlp.cpp
c/mnist/: CMakeLists.txt  mnist.cpp  mnist.hpp  mnist.pc.in
c/tests/: xor.cpp
c/train/: CMakeLists.txt  train.cpp
python/: digits.py  train.py
python/tvm/: add.py  autotvm.py  net.py  xnor.py
src/: array-utils.lisp  bops.lisp  crossover.lisp  dense.lisp  dense2.lisp  dense3.lisp  fully-connected.lisp  fuse-bitplane.lisp  ml-functions.lisp  mlp.lisp  mnist.lisp  mutation.lisp  neural-network.lisp  package.lisp  selection.lisp  sequential.lisp  softmax.lisp  tournament-selection.lisp  train.lisp  utils.lisp  vops.lisp
t/: package.lisp  tests.lisp
